# LIMO

./: README.md
eval/: bak.yaml  config.yaml  evaluator.py  main.py  pyproject.toml
eval/prompts/qwen-instruct/: gsm8k.py
eval/utils/: data_loader.py
